push left file